# obuspa

./: CMakeLists.txt  USP_SERVER.py  coreusp.pc.in  factory_reset_example.txt  obuspa.pc  usp-msg-1-1.proto  usp_record_1_1_pb2.py
pythonController/: USP_SERVER.py  app.py  app.py_  config.py  ctrl_stomp_example_get.txt  database_gui_server.sqlite  dict_shortcuts.py  dict_to_proto3_to_dict.py  msg_creator.py  msg_handler.py  requirements.txt  server.py  sqlusp.sql  test_flask.py  usp_commons.py  usp_database.py  usp_gui.db  usp_msg_1_1_pb2.py  usp_runtime.py
pythonController/templates/: top.html
pythonController/templates/admin/: base.html  devices_list.html  index.html
src/core/: device_controller.c  device_local_agent.c  main.c  mqtt.c  usp_err.c
